Bug 458069 - Cannot disable org.freedesktop.secrets
Summary: Cannot disable org.freedesktop.secrets
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kwallet
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.97.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Valentin Rusu
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-08-19 14:04 UTC by Alejandro Valdés
Modified: 2022-09-01 18:33 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alejandro Valdés 2022-08-19 14:04:10 UTC
SUMMARY

The new freedesktop.secrets api from kwallet cannot be disabled using configuration available in package.

1. Tested with kwalletmanager 22.07.90-1, it changes the value in kwalletrc correctly.

2. Updated ~/.config/kwalletrc manually with

[org.freedesktop.secrets]
apiEnabled=false

Re-login after every test, KeepassXC mentions this when running:

Warning: Another secret service is running (PID: 7129, Executable: /usr/bin/kwalletd5).
Please stop/remove it before re-enabling the Secret Service Integration.

If I kill kwalletd5 the secret service is disabled.

~/.config/kwalletrc
[Wallet]
Close When Idle=false
Close on Screensaver=false
Enabled=true
First Use=false
Idle Timeout=10
Launch Manager=false
Leave Manager Open=false
Leave Open=true
Prompt on Open=false
Use One Wallet=true

[org.freedesktop.secrets]
apiEnabled=false

STEPS TO REPRODUCE
1. Add apiEnabled=false to kwalletrc
2. Re-Login
3. org.freedesktop.secrets is still in use, (cannot use keepassXC secret service)

OBSERVED RESULT
secrets api still in use.

EXPECTED RESULT
secrets api should be disabled

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.25.4
KDE Frameworks Version: 5.97.0
Qt Version: 5.15.5
Kernel Version: 5.19.2-arch1-1 (64-bit)
Graphics Platform: X11

ADDITIONAL INFORMATION

tested also kwalletmanager 22.07.90-1 to change the configuration.
Comment 1 Nicolas Fella 2022-08-19 14:27:58 UTC
It looks like with apiEnabled=false kwallet correctly doesn't register the org.freedesktop.secrets *interface*. It still registers the *service* though
Comment 2 Bug Janitor Service 2022-08-19 14:33:46 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kwallet/-/merge_requests/33
Comment 3 fgnix 2022-08-20 18:07:07 UTC
I tested the mentioned patch and seems to resolve the issue

Thank you
Comment 4 ioo+kde 2022-08-24 19:17:03 UTC
I am affected by this bug as well. After a recent KDE Neon system update I lost secret service functionality. I have "Enable secret service DBus API unchecked in KWallet Manager 22.08.0 but it still breaking the workflow. Will this patch only apply to Archlinux or will KDE Neon be fixed as well? Is there any workaround in the meantime before this patch is integrated, I am not sure how I would be able to test it.
Comment 5 ioo+kde 2022-08-24 19:38:08 UTC
(In reply to Nicolas Fella from comment #1)
> It looks like with apiEnabled=false kwallet correctly doesn't register the
> org.freedesktop.secrets *interface*. It still registers the *service* though
How can I see the service? Is it possible to manually disable it until the problem is fixed? I don't see it running if I do a:
systemctl list-unit-files | grep org.freedesktop.secrets
Comment 6 Felix Yan 2022-08-26 09:46:18 UTC
The patch has been applied to Arch Linux's kwallet 5.97.0-3 for now.
Comment 7 michaelk83 2022-08-26 12:43:03 UTC
*** Bug 458085 has been marked as a duplicate of this bug. ***
Comment 8 Nicolas Fella 2022-08-29 18:58:59 UTC
Git commit db1d2ecd610212f3a6b68d8e602148cfef43688c by Nicolas Fella.
Committed on 29/08/2022 at 18:56.
Pushed by nicolasfella into branch 'master'.

Don't register dummy org.freedesktop.secrets service when api is disabled

It prevents other programs from claiming that service

M  +0    -3    src/runtime/kwalletd/kwalletd.cpp

https://invent.kde.org/frameworks/kwallet/commit/db1d2ecd610212f3a6b68d8e602148cfef43688c
Comment 9 ioo+kde 2022-09-01 17:47:00 UTC
(In reply to Bug Janitor Service from comment #2)
> A possibly relevant merge request was started @
> https://invent.kde.org/frameworks/kwallet/-/merge_requests/33

Does this patch apply to all distributions or just archlinux? I see the status was changed to resolved fixed. If it only applies to arch should I open a separate bug issue for the other distributions? I know kde neon is also affected.
Comment 10 michaelk83 2022-09-01 18:33:18 UTC
(In reply to ioo+kde from comment #9)
> Does this patch apply to all distributions or just archlinux?
Should apply to all, but it hasn't been released yet except on Arch. It should be in the next KWallet Frameworks version, due in Sep.