Don't register dummy org.freedesktop.secrets service when api is disabled

It prevents other programs from claiming that service

BUG: 458069